--- a/browser extension/style/content.css
+++ b/browser extension/style/content.css
@@ -37,7 +37,7 @@
 	position: fixed;
 	top: 10vh;
 	left: 10vw;
-	z-index: 5;
+	z-index: 1000;
 	box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
 }
 
@@ -62,6 +62,24 @@
 	height: 65vh;
 }
 
+#reputationBox{
+	align-content: center;
+}
+
 #userScore, #userTotalQuestionsAnswered{
 	text-align: center;
+}
+
+#form-input-fields{
+	width: 40vw;
+	margin-left: 20vw;
+}
+
+#signinButton, #signupButton{
+	width: 20vw;
+	margin-left: 10vw;
+}
+
+#suggestion{
+	text-align: left;
 }
